cassandra connection changes
