# services/Logger.API/routes/errorLogger.js
@@ -3,6 +3,14 @@ var router = express.Router();
 
 const ErrorLoggerController = require('../controllers/errorLogger');
 
-router.get('/:environment', ErrorLoggerController.getErrorLogs);
+router.get('/', ErrorLoggerController.getErrorLogs);
+
+router.post('/', ErrorLoggerController.addErrorLog);
+
+router.put('/', ErrorLoggerController.updateErrorLog);
+
+router.delete('/:id', ErrorLoggerController.deleteErrorLog);
+
+router.get('/:id', ErrorLoggerController.getErrorLogById);
 
 module.exports = router;
